--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
-#Rewrite all request to index.php
+#Uudelleenohjataan kaikki pyynnöt index.php tiedostoon
 RewriteEngine on
 RewriteRule   ^[^/.]*$ index.php
